# libnx-bindgen

./: .gitmodules  Cargo.toml
src/: main.rs
